# soccer_eventpred

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: label2events_seq2event_offense_only.json  sample_model.jsonnet
scripts/: confusion_matrix.py  evaluate.py  preprocess_data.py  train.py
soccer_eventpred/: env.py  util.py
soccer_eventpred/data/: dataclass.py  vocabulary.py
soccer_eventpred/data/preprocess/: preprocess_wyscout.py
soccer_eventpred/data/sources/: __init__.py  jleague.py  source.py  wyscout.py
soccer_eventpred/models/: __init__.py  event_predictor.py  single_event_with_performer_predictor.py  wyscout_sequence_event_predictor.py  wyscout_single_event_predictor.py
soccer_eventpred/modules/class_weight/: __init__.py  class_weight.py
soccer_eventpred/modules/datamodule/: __init__.py  jleague_single_event_datamodule.py  soccer_datamodule.py  soccer_dataset.py  wyscout_sequence_datamodule.py  wyscout_single_event_datamodule.py
soccer_eventpred/modules/seq2seq_encoder/: __init__.py  pass_through_encoder.py  pytoch_transformer_encoder.py  pytorch_seq2seq_wrapper.py
soccer_eventpred/modules/seq2vec_encoder/: __init__.py  bert_encoder.py  pytorch_seq2vec_wrapper.py
soccer_eventpred/modules/token_embedder/: __init__.py  embedding.py
soccer_eventpred/torch/: loss_function.py  optimizer.py  util.py
soccer_eventpred/torch/metrics/: classification.py
